orchestrator/database.deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: blackcarrot
    tier: database
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: blackcarrot
    tier: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: blackcarrot
    tier: database
spec:
  selector:
    matchLabels:
      app: blackcarrot
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blackcarrot
        tier: database
    spec:
      containers:
      - image: mysql:8.0-debian
        name: db-container
        ports:
        - containerPort: 3306
          name: db-container
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: db-claim
