orchestrator/public.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
spec:
  rules:
  - host: "blackcarrot.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: "/products"
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 80
      - path: "/search"
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 80
